{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Mouse",
            "id": "f84e1229-141a-4e72-aaec-46b71e0db778",
            "actions": [
                {
                    "name": "MouseLeft",
                    "type": "Value",
                    "id": "1881faf0-050c-4f5a-9f7e-9cd587a94057",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseRight",
                    "type": "Value",
                    "id": "ce061f99-1b9a-449a-860c-0b38156ff893",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4d58b146-83f5-46c3-b319-78f0610847a0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b448da4-06e9-4b82-a6e4-c149c164a7fa",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "id": "14f7ada3-cc22-4ce3-9706-b94724f60d12",
            "actions": [
                {
                    "name": "MoveForward",
                    "type": "Value",
                    "id": "eb617dac-7b82-40d7-a59f-c22fadddb727",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveBack",
                    "type": "Value",
                    "id": "cf2c943a-8596-4400-9608-36b11d525cd7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveLeft",
                    "type": "Value",
                    "id": "348c26c3-9989-4c32-a59c-4dd32a034d91",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveRight",
                    "type": "Value",
                    "id": "44966aa5-2aec-4769-8e86-b0c58f9acfd1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ExtendSelection",
                    "type": "Value",
                    "id": "0057c664-15c6-42c2-9fba-1a5fe81acf3d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1c3758a5-c27f-4829-ac66-f43946d079b0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e572b2d1-8a04-40fa-b6c6-08260bcdd801",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3edf620-d583-45d5-a9ea-59ae0818f6cd",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d0d0a00-cf88-4234-9c8e-51d0f17f1b02",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6cb1eae1-ba4d-4636-a9e0-5f9efcb8ce2c",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExtendSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}